transformadaLaplace/laplaceParser.py
# Generated from laplace.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class laplaceParser ( Parser ):

    grammarFileName = "laplace.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'/'", "'*'", "'^'", "'-'", 
                     "'d'", "'t'", "'t0'", "'q'", "'e'", "'a'", "'u'", "'J'", 
                     "'n'", "'Sin'", "'Cos'", "'Sinh'", "'Cosh'", "'log'", 
                     "'w'", "'tau'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "DIV", "MULT", 
                      "POW", "MINUS", "DELTA", "T", "T0", "Q", "EULER", 
                      "ALPHA", "U", "J", "N", "SIN", "COS", "SINH", "COSH", 
                      "LOG", "OMEGA", "TAU", "NEWLINE" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_expr = 2

    ruleNames =  [ "prog", "stat", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    DIV=3
    MULT=4
    POW=5
    MINUS=6
    DELTA=7
    T=8
    T0=9
    Q=10
    EULER=11
    ALPHA=12
    U=13
    J=14
    N=15
    SIN=16
    COS=17
    SINH=18
    COSH=19
    LOG=20
    OMEGA=21
    TAU=22
    NEWLINE=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(laplaceParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(laplaceParser.StatContext)
            else:
                return self.getTypedRuleContext(laplaceParser.StatContext,i)


        def getRuleIndex(self):
            return laplaceParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = laplaceParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 7 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 6
                self.stat()
                self.state = 9 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 10447232) != 0)):
                    break

            self.state = 11
            self.match(laplaceParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return laplaceParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(laplaceParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(laplaceParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(laplaceParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExpr" ):
                listener.enterPrintExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExpr" ):
                listener.exitPrintExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = laplaceParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 17
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 11, 13, 14, 16, 17, 18, 19, 20]:
                localctx = laplaceParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 13
                self.expr()
                self.state = 14
                self.match(laplaceParser.NEWLINE)
                pass
            elif token in [23]:
                localctx = laplaceParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 16
                self.match(laplaceParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return laplaceParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AmortiguacionExpContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EULER(self):
            return self.getToken(laplaceParser.EULER, 0)
        def POW(self):
            return self.getToken(laplaceParser.POW, 0)
        def MINUS(self):
            return self.getToken(laplaceParser.MINUS, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAmortiguacionExp" ):
                listener.enterAmortiguacionExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAmortiguacionExp" ):
                listener.exitAmortiguacionExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAmortiguacionExp" ):
                return visitor.visitAmortiguacionExp(self)
            else:
                return visitor.visitChildren(self)


    class SenoContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SIN(self):
            return self.getToken(laplaceParser.SIN, 0)
        def OMEGA(self):
            return self.getToken(laplaceParser.OMEGA, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeno" ):
                listener.enterSeno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeno" ):
                listener.exitSeno(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeno" ):
                return visitor.visitSeno(self)
            else:
                return visitor.visitChildren(self)


    class NPotenciaConDesplazamientoContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def T(self, i:int=None):
            if i is None:
                return self.getTokens(laplaceParser.T)
            else:
                return self.getToken(laplaceParser.T, i)
        def POW(self, i:int=None):
            if i is None:
                return self.getTokens(laplaceParser.POW)
            else:
                return self.getToken(laplaceParser.POW, i)
        def N(self):
            return self.getToken(laplaceParser.N, 0)
        def MULT(self):
            return self.getToken(laplaceParser.MULT, 0)
        def EULER(self):
            return self.getToken(laplaceParser.EULER, 0)
        def MINUS(self):
            return self.getToken(laplaceParser.MINUS, 0)
        def ALPHA(self):
            return self.getToken(laplaceParser.ALPHA, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNPotenciaConDesplazamiento" ):
                listener.enterNPotenciaConDesplazamiento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNPotenciaConDesplazamiento" ):
                listener.exitNPotenciaConDesplazamiento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNPotenciaConDesplazamiento" ):
                return visitor.visitNPotenciaConDesplazamiento(self)
            else:
                return visitor.visitChildren(self)


    class NesimaPotenciaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def T(self):
            return self.getToken(laplaceParser.T, 0)
        def POW(self):
            return self.getToken(laplaceParser.POW, 0)
        def N(self):
            return self.getToken(laplaceParser.N, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNesimaPotencia" ):
                listener.enterNesimaPotencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNesimaPotencia" ):
                listener.exitNesimaPotencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNesimaPotencia" ):
                return visitor.visitNesimaPotencia(self)
            else:
                return visitor.visitChildren(self)


    class EscalonUnitarioContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def U(self):
            return self.getToken(laplaceParser.U, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscalonUnitario" ):
                listener.enterEscalonUnitario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscalonUnitario" ):
                listener.exitEscalonUnitario(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscalonUnitario" ):
                return visitor.visitEscalonUnitario(self)
            else:
                return visitor.visitChildren(self)


    class CosenoHiperbolicoContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COSH(self):
            return self.getToken(laplaceParser.COSH, 0)
        def ALPHA(self):
            return self.getToken(laplaceParser.ALPHA, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCosenoHiperbolico" ):
                listener.enterCosenoHiperbolico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCosenoHiperbolico" ):
                listener.exitCosenoHiperbolico(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCosenoHiperbolico" ):
                return visitor.visitCosenoHiperbolico(self)
            else:
                return visitor.visitChildren(self)


    class LogaritmoNaturalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOG(self):
            return self.getToken(laplaceParser.LOG, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)
        def DIV(self):
            return self.getToken(laplaceParser.DIV, 0)
        def T0(self):
            return self.getToken(laplaceParser.T0, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogaritmoNatural" ):
                listener.enterLogaritmoNatural(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogaritmoNatural" ):
                listener.exitLogaritmoNatural(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogaritmoNatural" ):
                return visitor.visitLogaritmoNatural(self)
            else:
                return visitor.visitChildren(self)


    class FuncionDeBesselContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def J(self):
            return self.getToken(laplaceParser.J, 0)
        def OMEGA(self):
            return self.getToken(laplaceParser.OMEGA, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncionDeBessel" ):
                listener.enterFuncionDeBessel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncionDeBessel" ):
                listener.exitFuncionDeBessel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncionDeBessel" ):
                return visitor.visitFuncionDeBessel(self)
            else:
                return visitor.visitChildren(self)


    class SenoHiperbolicoContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SINH(self):
            return self.getToken(laplaceParser.SINH, 0)
        def ALPHA(self):
            return self.getToken(laplaceParser.ALPHA, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSenoHiperbolico" ):
                listener.enterSenoHiperbolico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSenoHiperbolico" ):
                listener.exitSenoHiperbolico(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSenoHiperbolico" ):
                return visitor.visitSenoHiperbolico(self)
            else:
                return visitor.visitChildren(self)


    class QesimaPotenciaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def T(self):
            return self.getToken(laplaceParser.T, 0)
        def POW(self):
            return self.getToken(laplaceParser.POW, 0)
        def Q(self):
            return self.getToken(laplaceParser.Q, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQesimaPotencia" ):
                listener.enterQesimaPotencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQesimaPotencia" ):
                listener.exitQesimaPotencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQesimaPotencia" ):
                return visitor.visitQesimaPotencia(self)
            else:
                return visitor.visitChildren(self)


    class RetrasoIdealContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DELTA(self):
            return self.getToken(laplaceParser.DELTA, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)
        def MINUS(self):
            return self.getToken(laplaceParser.MINUS, 0)
        def TAU(self):
            return self.getToken(laplaceParser.TAU, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetrasoIdeal" ):
                listener.enterRetrasoIdeal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetrasoIdeal" ):
                listener.exitRetrasoIdeal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetrasoIdeal" ):
                return visitor.visitRetrasoIdeal(self)
            else:
                return visitor.visitChildren(self)


    class EscalonRetrasoContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def U(self):
            return self.getToken(laplaceParser.U, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)
        def MINUS(self):
            return self.getToken(laplaceParser.MINUS, 0)
        def TAU(self):
            return self.getToken(laplaceParser.TAU, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscalonRetraso" ):
                listener.enterEscalonRetraso(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscalonRetraso" ):
                listener.exitEscalonRetraso(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscalonRetraso" ):
                return visitor.visitEscalonRetraso(self)
            else:
                return visitor.visitChildren(self)


    class ImpulsoUnitarioContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DELTA(self):
            return self.getToken(laplaceParser.DELTA, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImpulsoUnitario" ):
                listener.enterImpulsoUnitario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImpulsoUnitario" ):
                listener.exitImpulsoUnitario(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImpulsoUnitario" ):
                return visitor.visitImpulsoUnitario(self)
            else:
                return visitor.visitChildren(self)


    class CosenoContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a laplaceParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COS(self):
            return self.getToken(laplaceParser.COS, 0)
        def OMEGA(self):
            return self.getToken(laplaceParser.OMEGA, 0)
        def T(self):
            return self.getToken(laplaceParser.T, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoseno" ):
                listener.enterCoseno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoseno" ):
                listener.exitCoseno(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCoseno" ):
                return visitor.visitCoseno(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = laplaceParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = laplaceParser.RetrasoIdealContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.match(laplaceParser.DELTA)
                self.state = 20
                self.match(laplaceParser.T__0)
                self.state = 21
                self.match(laplaceParser.T)
                self.state = 22
                self.match(laplaceParser.MINUS)
                self.state = 23
                self.match(laplaceParser.TAU)
                self.state = 24
                self.match(laplaceParser.T__1)
                pass

            elif la_ == 2:
                localctx = laplaceParser.ImpulsoUnitarioContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.match(laplaceParser.DELTA)
                self.state = 26
                self.match(laplaceParser.T__0)
                self.state = 27
                self.match(laplaceParser.T)
                self.state = 28
                self.match(laplaceParser.T__1)
                pass

            elif la_ == 3:
                localctx = laplaceParser.AmortiguacionExpContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 29
                self.match(laplaceParser.EULER)
                self.state = 30
                self.match(laplaceParser.POW)
                self.state = 31
                self.match(laplaceParser.MINUS)
                self.state = 32
                self.match(laplaceParser.T)
                pass

            elif la_ == 4:
                localctx = laplaceParser.NPotenciaConDesplazamientoContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.match(laplaceParser.T)
                self.state = 34
                self.match(laplaceParser.POW)
                self.state = 35
                self.match(laplaceParser.N)
                self.state = 36
                self.match(laplaceParser.MULT)
                self.state = 37
                self.match(laplaceParser.EULER)
                self.state = 38
                self.match(laplaceParser.POW)
                self.state = 39
                self.match(laplaceParser.MINUS)
                self.state = 40
                self.match(laplaceParser.ALPHA)
                self.state = 41
                self.match(laplaceParser.T)
                pass

            elif la_ == 5:
                localctx = laplaceParser.EscalonUnitarioContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                self.match(laplaceParser.U)
                self.state = 43
                self.match(laplaceParser.T__0)
                self.state = 44
                self.match(laplaceParser.T)
                self.state = 45
                self.match(laplaceParser.T__1)
                pass

            elif la_ == 6:
                localctx = laplaceParser.EscalonRetrasoContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 46
                self.match(laplaceParser.U)
                self.state = 47
                self.match(laplaceParser.T__0)
                self.state = 48
                self.match(laplaceParser.T)
                self.state = 49
                self.match(laplaceParser.MINUS)
                self.state = 50
                self.match(laplaceParser.TAU)
                self.state = 51
                self.match(laplaceParser.T__1)
                pass

            elif la_ == 7:
                localctx = laplaceParser.NesimaPotenciaContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.match(laplaceParser.T)
                self.state = 53
                self.match(laplaceParser.POW)
                self.state = 54
                self.match(laplaceParser.N)
                pass

            elif la_ == 8:
                localctx = laplaceParser.QesimaPotenciaContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 55
                self.match(laplaceParser.T)
                self.state = 56
                self.match(laplaceParser.POW)
                self.state = 57
                self.match(laplaceParser.Q)
                pass

            elif la_ == 9:
                localctx = laplaceParser.SenoContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 58
                self.match(laplaceParser.SIN)
                self.state = 59
                self.match(laplaceParser.T__0)
                self.state = 60
                self.match(laplaceParser.OMEGA)
                self.state = 61
                self.match(laplaceParser.T)
                self.state = 62
                self.match(laplaceParser.T__1)
                pass

            elif la_ == 10:
                localctx = laplaceParser.CosenoContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 63
                self.match(laplaceParser.COS)
                self.state = 64
                self.match(laplaceParser.T__0)
                self.state = 65
                self.match(laplaceParser.OMEGA)
                self.state = 66
                self.match(laplaceParser.T)
                self.state = 67
                self.match(laplaceParser.T__1)
                pass

            elif la_ == 11:
                localctx = laplaceParser.SenoHiperbolicoContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 68
                self.match(laplaceParser.SINH)
                self.state = 69
                self.match(laplaceParser.T__0)
                self.state = 70
                self.match(laplaceParser.ALPHA)
                self.state = 71
                self.match(laplaceParser.T)
                self.state = 72
                self.match(laplaceParser.T__1)
                pass

            elif la_ == 12:
                localctx = laplaceParser.CosenoHiperbolicoContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 73
                self.match(laplaceParser.COSH)
                self.state = 74
                self.match(laplaceParser.T__0)
                self.state = 75
                self.match(laplaceParser.ALPHA)
                self.state = 76
                self.match(laplaceParser.T)
                self.state = 77
                self.match(laplaceParser.T__1)
                pass

            elif la_ == 13:
                localctx = laplaceParser.LogaritmoNaturalContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 78
                self.match(laplaceParser.LOG)
                self.state = 79
                self.match(laplaceParser.T__0)
                self.state = 80
                self.match(laplaceParser.T)
                self.state = 81
                self.match(laplaceParser.DIV)
                self.state = 82
                self.match(laplaceParser.T0)
                self.state = 83
                self.match(laplaceParser.T__1)
                pass

            elif la_ == 14:
                localctx = laplaceParser.FuncionDeBesselContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 84
                self.match(laplaceParser.J)
                self.state = 85
                self.match(laplaceParser.T__0)
                self.state = 86
                self.match(laplaceParser.OMEGA)
                self.state = 87
                self.match(laplaceParser.T)
                self.state = 88
                self.match(laplaceParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





